# turbo

./: .gitignore  .gitmodules  CMakeLists.txt  COPYRIGHT  README.md
.github/workflows/: cmake.yml
doc/: turbo.1
examples/: CMakeLists.txt  demo.cc
include/: Scilexers.h  ScintillaHeaders.h  TurboPCH.h
include/test/: test.h
include/turbo/: base64.h  basicframe.h  basicwindow.h  clipboard.h  editor.h  editstates.h  fileeditor.h  funcview.h  scintilla.h  styles.h  tpath.h  tscintilla.h  turbo.h  util.h
include/turbo/scintilla/: ScintillaInternals.h  ScintillaTV.h  tscintilla.h
man/: Makefile  turbo.1.txt
scintilla/src/: EditView.cxx  Editor.cxx
source/examples/: CMakeLists.txt  demo.cc
source/scintilla/src/: Catalogue.cxx
source/turbo/: app.cc  app.h  apputils.h  checkbox.cc  cmds.h  combobox.cc  doctree.cc  editframe.cc  editframe.h  editor.cc  editor.h  editwindow.cc  editwindow.h  gotoline.cc  help.cc  help.h  listviews.cc  listviews.h  main.cc  search.cc  search.h
source/turbo-core/: basicframe.cc  basicwindow.cc  clipboard.cc  editor.cc  editstate.cc  editstates.cc  editview.cc  fileedit.cc  fileeditor.cc  scintilla.cc  styles.cc  tpath.cc  tscintilla.cc  util.cc
source/turbo-core/platform/: font.cc  library.cc  listbox.cc  menu.cc  platform.cc  surface.cc  surface.h  window.cc
src/: app.cc  app.h  clipboard.cc  clipboard.h  doctree.cc  doctree.h  docview.cc  docview.h  drawview.cc  drawview.h  drawviews.cc  drawviews.h  editframe.cc  editframe.h  editstate.cc  editstates.cc  editstates.h  editsurface.h  editview.cc  editwindow.cc  editwindow.h  fileedit.cc  fileedit.h  leftmargin.cc  linenumbers.h  listviews.cc  listviews.h  main.cc  search.cc  search.h  styles.cc  styles.h  tpath.cc  tpath.h  tscintilla.cc  tscintilla.h  util.cc  util.h  widgets.h
src/platform/: font.cc  library.cc  listbox.cc  menu.cc  platform.cc  surface.cc  surface.h  window.cc
test/: test.cc
test/turbo-core/: editstates.test.cc
